Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-52348

Missing include in example causes build issue (qquickcontrols, texteditor example)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.6.1
    • 5.6.0
    • Examples and Demos
    • None
    • ec2c00d4e092b540f318aa343b6451394312fa27

    Description

      Microsoft (R) Program Maintenance Utility Version 12.00.21005.1
      Copyright (C) Microsoft Corporation. All rights reserved.

      cl -c -nologo -Zc:wchar_t -FS -Zi -MDd -D_HAS_EXCEPTIONS=0 -MP -GR -W3 -w34100 -w34189 -w44996 /Fddebug\texteditor.pdb -DUNICODE -DWIN32 -DWIN64 -DQT_NO_EXCEPTIONS -DQT_QUICK_LIB -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_QML_LIB -DQT_NETWO
      RK_LIB -DQT_CORE_LIB -IX:\QMakeBased\Libraries\qt-everywhere-opensource-src-5.6.0\qtquickcontrols\examples\quick\controls\texteditor -I. -IX:\QMakeBased\Libraries\qt-everywhere-opensource-src-5.6.0\qtquickcontrols\examples\quick\controls\sh
      ared -IX:\QMakeBased\Libraries\qt-everywhere-opensource-src-5.6.0\qtdeclarative\include -IX:\x64.13\VC.120\Libraries\Qt-5.6.0\qtbase\include -IX:\QMakeBased\Libraries\qt-everywhere-opensource-src-5.6.0\qtdeclarative\include\QtQuick -IX:\x64
      .13\VC.120\Libraries\Qt-5.6.0\qtbase\include\QtQuick -IX:\QMakeBased\Libraries\qt-everywhere-opensource-src-5.6.0\qtbase\include -IX:\QMakeBased\Libraries\qt-everywhere-opensource-src-5.6.0\qtbase\include\QtWidgets -IX:\x64.13\VC.120\Librar
      ies\Qt-5.6.0\qtbase\include\QtWidgets -IX:\QMakeBased\Libraries\qt-everywhere-opensource-src-5.6.0\qtbase\include\QtGui-IX:\x64.13\VC.120\Libraries\Qt-5.6.0\qtbase\include\QtGui -IX:\QMakeBased\Libraries\qt-everywhere-opensource-src-5.6.0\
      qtdeclarative\include\QtQml -IX:\x64.13\VC.120\Libraries\Qt-5.6.0\qtbase\include\QtQml -IX:\QMakeBased\Libraries\qt-everywhere-opensource-src-5.6.0\qtbase\include\QtNetwork -IX:\x64.13\VC.120\Libraries\Qt-5.6.0\qtbase\include\QtNetwork -IX:
      \QMakeBased\Libraries\qt-everywhere-opensource-src-5.6.0\qtbase\include\QtCore -IX:\x64.13\VC.120\Libraries\Qt-5.6.0\qtbase\include\QtCore -I.moc\debug -IX:\QMakeBased\Libraries\qt-everywhere-opensource-src-5.6.0\qtbase\mkspecs\win32-msvc2013 -Fo.obj\debug\ @C:\Temp\nm232B.tmp
      documenthandler.cpp
      X:\QMakeBased\Libraries\qt-everywhere-opensource-src-5.6.0\qtquickcontrols\examples\quick\controls\texteditor\src\documenthandler.cpp(136) : error C2027: use of undefined type 'QDebug'
      x:\qmakebased\libraries\qt-everywhere-opensource-src-5.6.0\qtbase\include\qtcore\../../src/corelib/global/qlogging.h(51) : see declaration of 'QDebug'
      X:\QMakeBased\Libraries\qt-everywhere-opensource-src-5.6.0\qtquickcontrols\examples\quick\controls\texteditor\src\documenthandler.cpp(136) : error C2678: binary '<<' : no operator found which takes a left-hand operand of type 'QDebug' (or there is no acceptable conversion)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tpochep Timur Pocheptsov
            drescherjm John Drescher
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes