Remove redundant qDebug

Task-number: QTBUG-52348
Change-Id: If1cef668626fbf5616b5fbb3e60233f3935334cd
Reviewed-by: Liang Qi <liang.qi@theqtcompany.com>
Reviewed-by: Topi Reiniö <topi.reinio@theqtcompany.com>